# Jade-LTC

./: .gitmodules  test_jade.py  test_ltc_psbt.py
components/blake3/: CMakeLists.txt  test_blake3.c
components/esp_lcd_sh8601/: esp_lcd_sh8601.c
components/libwally-core/: CMakeLists.txt
docs/: index.rst
jadepy/: __init__.py  jade.py  jade_serial.py
main/: CMakeLists.txt  amalgamated.c  button_events.h  qrmode.c  selfcheck.c  ui.h  wallet.c  wallet.h
main/ble/: ble.c
main/input/: touchscreen.inc
main/mweb/: mweb_blind.c  mweb_blind.h  mweb_hash.c  mweb_hash.h  mweb_keychain.c  mweb_keychain.h  mweb_schnorr.c  mweb_schnorr.h  mweb_selfcheck.c  mweb_sign.c  mweb_sign.h  test_mweb_blind.c  test_mweb_hash.c  test_mweb_keychain.c  test_mweb_schnorr.c  test_mweb_sign.c
main/mweb/tests/: test_mweb_keychain.c
main/process/: dashboard.c  get_receive_address.c  mweb_ops.c  sign_message.c  sign_psbt.c  sign_tx.c
main/ui/: dashboard.c  sign_tx.c  sign_tx.h
main/usbhmsc/: usbmode.c
main/utils/: address.c  network.c  network.h
test_data/: ltc_badtxn_green_rejected.json  ltc_badtxn_wrong_cointype.json  ltc_msg_path.json  ltc_msg_simple.json  ltc_psbt_ss_p2pkh.json  ltc_psbt_ss_p2sh_p2wpkh.json  ltc_psbt_ss_p2wpkh.json  ltc_txn_segwit.json
